# Bin-Packing-Problem

./: CMakeLists.txt  README.md  bin.cpp  bin.h  item.cpp  item.h  main.cpp  main.py  matrix.cpp  matrix.h  raport
algorithm/: differentalgorithm.py  greedyalgorithm.cpp  greedyalgorithm.h  precisealgorithm.cpp  precisealgorithm.h
filemanager/: filemanager.cpp  filemanager.h  utils.cpp  utils.h
files/: input.txt  output.txt
files/test_files/: test_file1.txt  test_file10.txt  test_file11.txt  test_file12.txt  test_file13.txt  test_file14.txt  test_file2.txt  test_file3.txt  test_file4.txt  test_file5.txt  test_file6.txt  test_file7.txt  test_file8.txt  test_file9.txt
